Revert "Fix footer gap: replace margin-top with padding-top so spacing uses footer bg color"
This reverts commit f5d0a38217a9324bf1b96a4b44fb56146d240e12.

--- a/CSS/Forside.css
+++ b/CSS/Forside.css
@@ -420,12 +420,9 @@ p{
     font-size: 2vw;
   }
 
-  footer {
-    padding-top: 8%;
-  }
-
   .footerSection {
     background-color: #222222;
+    margin-top: 8%;
   }
 }
 
@@ -566,13 +563,10 @@ p{
     font-size: 3.5vw;
   }
 
-  footer {
-    padding-top: 40%;
-  }
-
   .footerSection {
     display: flex;
     justify-content: center;
+    margin-top: 40%;
     background-color: #222222;
   }
 
