--- a/CSS/Galleri.css
+++ b/CSS/Galleri.css
@@ -304,12 +304,9 @@ p{
         font-size: 2vw;
     }
 
-    footer {
-        padding-top: 8%;
-    }
-
     .footerSection {
         background-color: #222222;
+        margin-top: 8%;
     }
 }
 
@@ -376,13 +373,10 @@ p{
         margin-top: 0%;
     }
 
-    footer {
-        padding-top: 40%;
-    }
-
     .footerSection {
         display: flex;
         justify-content: center;
+        margin-top: 40%;
         background-color: #222222;
     }
     footer h3 {
