--- a/CSS/Om.css
+++ b/CSS/Om.css
@@ -315,12 +315,9 @@ p{
         font-size: 2vw;
     }
 
-    footer {
-        padding-top: 8%;
-    }
-
     .footerSection {
         background-color: #222222;
+        margin-top: 8%;
     }
 }
 
@@ -415,13 +412,10 @@ p{
         font-size: medium;
     }
 
-    footer {
-        padding-top: 40%;
-    }
-
     .footerSection {
         display: flex;
         justify-content: center;
+        margin-top: 40%;
         background-color: #222222;
     }
     footer h3 {
