--- a/CSS/Prisliste.css
+++ b/CSS/Prisliste.css
@@ -254,12 +254,9 @@ p{
         font-size: 2vw;
     }
 
-    footer {
-        padding-top: 8%;
-    }
-
     .footerSection {
         background-color: #222222;
+        margin-top: 8%;
     }
 }
 
@@ -321,13 +318,10 @@ p{
         border-radius: 8px;
     }
 
-    footer {
-        padding-top: 40%;
-    }
-
     .footerSection {
         display: flex;
         justify-content: center;
+        margin-top: 40%;
         background-color: #222222;
     }
     footer h3 {
